[refactor] add init deinit, and replace tab to space
[refactor] add init deinit, and replace tab to space

add io spim usart init deinit method
relpace all file tab to space

--- a/project/framework.uvprojx
+++ b/project/framework.uvprojx
@@ -385,6 +385,11 @@
           <GroupName>include</GroupName>
           <Files>
             <File>
+              <FileName>fw_chip.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\include\fw_chip.h</FilePath>
+            </File>
+            <File>
               <FileName>fw_io.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\include\fw_io.h</FilePath>
@@ -400,14 +405,14 @@
               <FilePath>..\include\fw_spim.h</FilePath>
             </File>
             <File>
+              <FileName>fw_spim_entity.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\include\fw_spim_entity.h</FilePath>
+            </File>
+            <File>
               <FileName>fw_usart.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\include\fw_usart.h</FilePath>
-            </File>
-            <File>
-              <FileName>fw_chip.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\include\fw_chip.h</FilePath>
             </File>
           </Files>
         </Group>
