[fix] IO SPIM getEntity add memory
[fix] IO SPIM getEntity add memory

rename fw_io_pin.h to fw_io_entity.h
refactor tab to space
fix IO.getPin to IO.getEntity and add param memory
fix SPIM.getEntity add param memiry

--- a/project/framework.uvprojx
+++ b/project/framework.uvprojx
@@ -395,9 +395,9 @@
               <FilePath>..\include\fw_io.h</FilePath>
             </File>
             <File>
-              <FileName>fw_io_pin.h</FileName>
+              <FileName>fw_io_entity.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\include\fw_io_pin.h</FilePath>
+              <FilePath>..\include\fw_io_entity.h</FilePath>
             </File>
             <File>
               <FileName>fw_spim.h</FileName>
