--- a/project/framework.uvprojx
+++ b/project/framework.uvprojx
@@ -184,6 +184,7 @@
             <uocXRam>0</uocXRam>
             <RvdsVP>0</RvdsVP>
             <RvdsMve>0</RvdsMve>
+            <RvdsCdeCp>0</RvdsCdeCp>
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -350,7 +351,7 @@
             <NoWarn>0</NoWarn>
             <uSurpInc>0</uSurpInc>
             <useXO>0</useXO>
-            <uClangAs>0</uClangAs>
+            <ClangAsOpt>4</ClangAsOpt>
             <VariousControls>
               <MiscControls></MiscControls>
               <Define></Define>
@@ -410,6 +411,11 @@
               <FilePath>..\include\fw_spim_entity.h</FilePath>
             </File>
             <File>
+              <FileName>fw_timer.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\include\fw_timer.h</FilePath>
+            </File>
+            <File>
               <FileName>fw_usart.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\include\fw_usart.h</FilePath>
@@ -418,11 +424,6 @@
               <FileName>fw_ioint.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\include\fw_ioint.h</FilePath>
-            </File>
-            <File>
-              <FileName>fw_timer.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\include\fw_timer.h</FilePath>
             </File>
           </Files>
         </Group>
