--- a/project/framework.uvprojx
+++ b/project/framework.uvprojx
@@ -420,6 +420,11 @@
               <FileType>5</FileType>
               <FilePath>..\include\fw_ioint.h</FilePath>
             </File>
+            <File>
+              <FileName>fw_i2c.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\include\fw_i2c.h</FilePath>
+            </File>
           </Files>
         </Group>
       </Groups>
