--- a/project/framework.uvprojx
+++ b/project/framework.uvprojx
@@ -392,6 +392,16 @@
               <FilePath>..\include\fw_base.h</FilePath>
             </File>
             <File>
+              <FileName>fw_adc.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\include\fw_adc.h</FilePath>
+            </File>
+            <File>
+              <FileName>fw_adc_channel.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\include\fw_adc_channel.h</FilePath>
+            </File>
+            <File>
               <FileName>fw_io_pin.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\include\fw_io_pin.h</FilePath>
@@ -425,6 +435,11 @@
               <FileName>fw_i2cm.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\include\fw_i2cm.h</FilePath>
+            </File>
+            <File>
+              <FileName>version.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\include\version.h</FilePath>
             </File>
           </Files>
         </Group>
